# garden-tui

./: Cargo.toml  README.md  api.json  config.json
src/: app.rs  config.rs  context.rs  flow.rs  main.rs  order_script.rs
src/garden_api/: mod.rs  orderbook.rs  quote.rs  types.rs
src/htlc/: bitcoin_htlc.rs  mod.rs  utils.rs
src/htlc/abi/: htlc.json
src/service/: mod.rs
src/service/blockchain/: mod.rs
src/service/blockchain/bitcoin/: htlc.rs  htlc_handler.rs  mod.rs  scripts.rs  tx_utils.rs
src/service/blockchain/evm/: mod.rs
src/service/garden/: mod.rs  orderbook.rs  quote.rs  types.rs
src/states/: mod.rs  network_information.rs  network_selection.rs  order_information.rs  strategy_selector.rs  swap_information.rs
src/ui/: mod.rs
src/ui/components/: selector.rs
src/ui/states/: mod.rs  network_information.rs  order_information.rs  swap_information.rs
