[package]
name = "garden_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
bigdecimal = { version = "0.4.5", features = [
    "serde",
    "serde-json",
    "serde_json",
] }
hex = "0.4.3"
bitcoin = "0.32.5"
rand = "0.9.0"
sha2 = "0.10.8"
alloy = "0.13.0"
chrono = "0.4.40"
